[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/dwl/Editor/MainDock/DWLDock.gd" type="Script" id=1]

[node name="DynamicWebLoader" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 1916.0
margin_bottom = 1076.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1912.0
margin_bottom = 20.0
alignment = 1

[node name="BtnGenerateJSON" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 856.0
margin_right = 962.0
margin_bottom = 20.0
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Generate JSON"

[node name="BtnOpenConfig" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 966.0
margin_right = 1055.0
margin_bottom = 20.0
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Open config"

[node name="GenerationResult" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 1912.0
margin_bottom = 38.0
